--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,35 @@
         <script src="/socket.io/socket.io.js"></script>
         
         <!-- Some simple styles and fonts -->
-        <!-- <link rel="stylesheet" href="main.css"> -->
+        <link rel="stylesheet" href="main.css">
 
     </head>
   
     <body>
+        <div id='chatbox'>
+            <ul id="messages"></ul>
+            <form action="">
+              <input id="m" autocomplete="off" /><button>Send</button>
+            </form>
+        </div>
+        <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script src="game.js"></script>
         <script src="player.js"></script>
+        
+        <script>
+            $(function () {
+              var socket = io();
+              $('form').submit(function(){
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+              });
+              socket.on('chat message', function(msg){
+                  console.log('messsage', msg)
+                  $('#messages').append($('<li>').text(msg));
+                  window.scrollTo(0, document.body.scrollHeight);
+              });
+            });
+          </script>
     </body>
 </html>
