--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
    
     <head>
         <meta charset="UTF-8" />
-        <title>Multiplayer Battleship</title>
+        <title></title>
         <!-- Load the Phaser game library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.2/phaser.min.js"></script>
         <!-- Load the Socket.io networking library -->
