--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
             
             function preload(){
                 game.load.crossOrigin = "Anonymous";
-                game.stage.backgroundColor = "#58da45";                             //+++changed background color 
+                // game.stage.backgroundColor = "#58da45";                             //+++changed background color 
                 // Load all the ships
                 for(let i=1;i<=10;i++){                                                 
-                    game.load.image('person'+String(i) +'_'+i, ASSET_URL + 'robot1_gun.png');           //+++changing assets 
+                    game.load.image('person'+String(i) +'_1', ASSET_URL + 'robot1_gun.png');           //+++changing assets 
                     game.load.image('person'+String(i) +'_2', ASSET_URL + 'robot2_gun.png');
-                    console.log('WHAT COULD THIS BE:', String(i));
                     game.load.image('person'+String(i) +'_3', ASSET_URL + 'robot3_gun.png');
                     game.load.image('person'+String(i) +'_4', ASSET_URL + 'robot4_gun.png');
                 }
