--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="game.js"></script>
     <script src="player.js"></script>
-
+    <script src="zombie.js"></script>
     <script>
         $(function () {
             var socket = io();
