--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="game.js"></script>
     <script src="player.js"></script>
     <script src="zombie.js"></script>
+    <script src="timer.js"></script>
     <script>
         $(function () {
             var socket = io();
