--- a/game/public/index.html
+++ b/game/public/index.html
@@ -22,7 +22,10 @@
     </div>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="game.js"></script>
+    <script src="./lib/utils.js"></script>
+    <script src="main.js"></script>
     <script src="player.js"></script>
+    
 
     <script>
         $(function () {
