--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,11 @@
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script src="game.js"></script>
-    <script src="player.js"></script>
+    <script type="text/javascript" src="Client.js"></script>
+    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="player.js"></script>
+    <script src="chat.js"></script>
 
-    <script>
-        $(function () {
-            var socket = io();
-            $('form').submit(function () {
-                socket.emit('chat message', $('#m').val());
-                $('#m').val('');
-                return false;
-            });
-            socket.on('chat message', function (msg) {
-                console.log('messsage', msg)
-                $('#messages').append($('<li>').text(msg));
-                window.scrollTo(0, document.body.scrollHeight);
-            });
-        });
-    </script>
 </body>
 
 </html>
