--- a/game/public/index.html
+++ b/game/public/index.html
@@ -21,10 +21,11 @@
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script src="game.js"></script>
+    <!--<script src="game.js"></script>-->
     <script src="./lib/utils.js"></script>
-    <script src="main.js"></script>
     <script src="player.js"></script>
+    <script src="main.js"></script>
+    
     
 
     <script>
