--- a/game/public/index.html
+++ b/game/public/index.html
@@ -6,6 +6,8 @@
         <title></title>
         <!-- Load the Phaser game library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.2/phaser.min.js"></script>
+        <!--healthBar plugin-->
+        <script src="../vendor/healthMeter.js"></script>
         <!-- Load the Socket.io networking library -->
         <script src="/socket.io/socket.io.js"></script>
         
